--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="txt_pagar">Pagar</string>
     <string name="txt_recarga">Recarga</string>
     <string name="txt_cartaofinal">Cartão Final</string>
+    <string name="transferir">Transferir</string>
 </resources>
